--- a/html/lecture15-midterm-review.slides.html
+++ b/html/lecture15-midterm-review.slides.html
@@ -14421,13 +14421,13 @@ $$ \underbrace{\text{Dataset}}_\text{Features, Attributes, Targets} + \underbrac
 <h1 id="Linear-Regression">Linear Regression<a class="anchor-link" href="#Linear-Regression">&#182;</a></h1><p>In linear regression, we fit a model
 $$ f_\theta(x) := \theta^\top \phi(x) $$
 that is linear in $\theta$.</p>
-<p>The features $\phi(x) : \mathbb{R} \to \mathbb{R}^p$ are non-linear may non-linear in $x$ (e.g., polynomial features), allowing us to fit complex functions.</p>
+<p>The features $\phi(x) : \mathbb{R} \to \mathbb{R}^p$ may be non-linear in $x$ (e.g., polynomial features), allowing us to fit complex functions.</p>
 
 </div>
 </div></section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>We can write a least squares objective for the model as:
+<p>We define the least squares objective for the model as:
 $$ J(\theta) = \frac{1}{2} \sum_{i=1}^n (y^{(i)} - \theta^\top x^{(i)})^2 = \frac{1}{2} (X \theta - y)^\top  (X \theta - y) $$</p>
 
 </div>
@@ -14451,7 +14451,7 @@ $$ \theta^* = (X^\top X)^{-1} X^\top y.$$</p>
 <h1 id="Overfitting">Overfitting<a class="anchor-link" href="#Overfitting">&#182;</a></h1><p>Overfitting is one of the most common failure modes of machine learning.</p>
 <ul>
 <li>A very expressive model (a high degree polynomial) fits the training dataset perfectly.</li>
-<li>The model also makes wildly incorrect prediction outside this dataset, and doesn't generalize.</li>
+<li>The model also makes highly incorrect predictions outside the training set, and doesn't generalize.</li>
 </ul>
 
 </div>
@@ -14461,7 +14461,7 @@ $$ \theta^* = (X^\top X)^{-1} X^\top y.$$</p>
 <p>We can measure overfitting and underfitting by estimating accuracy on held out data and comparing it to the training data.</p>
 <ul>
 <li>If training perforance is high but holdout performance is low, we are overfitting.</li>
-<li>If training perforance is low but holdout performance is low, we are underfitting.</li>
+<li>If training perforance is low and holdout performance is low, we are underfitting.</li>
 </ul>
 
 </div>
@@ -14532,7 +14532,7 @@ If we use the L1 norm, we have the <strong>LASSO</strong>.</p>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <ul>
-<li>Non-parametric models have the advantage of not loosing any information at training time. </li>
+<li>Non-parametric models have the advantage of not losing any information at training time. </li>
 <li>However, they are also computationally less tractable and may easily overfit the training set.</li>
 </ul>
 
@@ -14600,7 +14600,7 @@ These are often just the % of each class in the data.</li>
 </div></section></section><section><section>
 <div class="jp-Cell-inputWrapper"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="Text-Classification-&amp;-Bag-of-Words">Text Classification &amp; Bag of Words<a class="anchor-link" href="#Text-Classification-&amp;-Bag-of-Words">&#182;</a></h1><p>Perhaps the most widely used approach to representing text documents is called "bag of words".</p>
+<h1 id="Text-Classification-&amp;-Bag-of-Words">Text Classification &amp; Bag of Words<a class="anchor-link" href="#Text-Classification-&amp;-Bag-of-Words">&#182;</a></h1><p>Perhaps the most widely used approach for representing text documents is called "bag of words".</p>
 <p>We start by defining a vocabulary $V$ containing all the possible words we are interested in, e.g.:
 $$ V = \{\text{church}, \text{doctor}, \text{fervently}, \text{purple}, \text{slow}, ...\} $$</p>
 
